WebRTC: fixed livestreaming editor on mobile.

--- a/platform/plugins/Streams/web/css/tools/livestreamingEditor.css
+++ b/platform/plugins/Streams/web/css/tools/livestreamingEditor.css
@@ -1495,11 +1495,16 @@
     justify-content: center;
     align-items: center;
     margin-right: 5px;
+    width: 19px;
 }
 .live-editor-popup-scenes-control .live-editor-popup-scenes-control-btn svg,
 .live-editor-popup-sources-control .live-editor-popup-sources-control-btn svg{
-    width: 24px;
-    height: 24px;
+    /*width: 24px;
+    height: 24px;*/
+    width: 100%;
+    height: 100%;
+    max-width: 24px;
+    max-height: 24px;
 }
 .live-editor-popup-scenes-control .live-editor-popup-scenes-control-btn svg path,
 .live-editor-popup-sources-control .live-editor-popup-sources-control-btn svg path{
